--- a/application-builder/package.json
+++ b/application-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "synergy",
+  "name": "@Zimtir/synergy",
   "version": "1.0.0",
   "description": "",
   "source": "src/index.js",
@@ -20,9 +20,63 @@
   },
   "homepage": "https://github.com/Zimtir/synergy#readme",
   "devDependencies": {
-    "parcel": "^2.6.2"
+    "@qiwi/semantic-release-gh-pages-plugin": "^5.2.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.5",
+    "@semantic-release/npm": "^9.0.1",
+    "conventional-changelog-conventionalcommits": "^5.0.0",
+    "parcel": "^2.6.2",
+    "semantic-release": "^19.0.3"
   },
   "dependencies": {
     "application-source": "file:../application-source"
+  },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/changelog",
+    {
+      "path": "@semantic-release/git",
+      "assets": [
+        "package.json",
+        "package-lock.json",
+        "CHANGELOG.md",
+        "dist/desktop/*"
+      ],
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+    },
+    "@semantic-release/github",
+    "@semantic-release/npm",
+    [
+      "@qiwi/semantic-release-gh-pages-plugin",
+      {
+        "msg": "updated",
+        "branch": "web",
+        "src": "dist/web"
+      }
+    ]
+  ],
+  "release": {
+    "publish": [
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/github",
+        "assets": [
+          "CHANGELOG.md",
+          "dist/desktop/*"
+        ]
+      }
+    ]
+  },
+  "files": [
+    "README.md",
+    "LICENSE",
+    "dist/web"
+  ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "tag": "latest",
+    "access": "public"
   }
 }
