--- a/application-executor/neutralino.config.json
+++ b/application-executor/neutralino.config.json
@@ -1,7 +1,7 @@
 {
   "applicationId": "js.neutralino.zero",
   "version": "1.0.0",
-  "defaultMode": "browser",
+  "defaultMode": "window",
   "documentRoot": "/www/",
   "url": "/",
   "enableServer": true,
