--- a/application-builder/package.json
+++ b/application-builder/package.json
@@ -32,6 +32,54 @@
   "dependencies": {
     "application-source": "file:../application-source"
   },
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
+    {
+      "path": "@semantic-release/git",
+      "assets": [
+        "package.json",
+        "package-lock.json",
+        "CHANGELOG.md"
+      ],
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+    },
+    "@semantic-release/github",
+    "@semantic-release/npm"
+  ],
+  "release": {
+    "verifyConditions": [
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git",
+      "@semantic-release/github",
+      "@qiwi/semantic-release-gh-pages-plugin"
+    ],
+    "publish": [
+      "@semantic-release/npm",
+      {
+        "path": "@semantic-release/github",
+        "assets": [
+          "CHANGELOG.md",
+          "dist/desktop/*"
+        ]
+      },
+      [
+        "@qiwi/semantic-release-gh-pages-plugin",
+        {
+          "msg": "updated",
+          "branch": "web",
+          "src": "dist/web"
+        }
+      ]
+    ]
+  },
   "files": [
     "README.md",
     "LICENSE",
